Melhoria SEO pagina princinpal

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UniCV Flores - Centro Universitário</title>
-    <meta name="description" content="UniCV Polo Flores - Graduação, Pós-Graduação e Cursos Técnicos" />
+    <title>UniCV Polo Manaus Flores | Graduação e Pós EAD Reconhecidas pelo MEC</title>
+    <meta name="description" content="Estude de onde estiver com o UniCV! Cursos de Graduação e Pós EAD, nota máxima no MEC e suporte local no Amazonas. Inscreva-se agora e avance na sua carreira!" />
     <meta name="author" content="UniCV" />
 
     <meta property="og:title" content="UniCV Flores" />
