--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Estude de onde estiver com o UniCV! Cursos de Graduação e Pós EAD, nota máxima no MEC e suporte local no Amazonas. Inscreva-se agora e avance na sua carreira!" />
     <meta name="author" content="UniCV" />
 
-    <meta property="og:title" content="UniCV Flores" />
-    <meta property="og:description" content="Centro Universitário UniCV - Polo Flores" />
+    <meta property="og:title" content="UniCV Polo Manaus Flores" />
+    <meta property="og:description" content="Centro Universitário Cidade Verde - Polo Manaus Flores" />
     <meta property="og:type" content="website" />
     
     <!-- Google Fonts -->
