Snippet de código do AdSense

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta property="og:title" content="UniCV Polo Manaus Flores" />
     <meta property="og:description" content="Centro Universitário Cidade Verde - Polo Manaus Flores" />
     <meta property="og:type" content="website" />
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4458597441594601"
+     crossorigin="anonymous"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
