teste 03 implementação blog

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Painel Administrativo - UniCV Manaus</title>
+    <title>Painel Administrativo</title>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <link href="config.yml" type="text/yaml" rel="cms-config-url" />
   </head>
   <body></body>
 </html>
