--- a/public/email.html
+++ b/public/email.html
@@ -1,123 +1,152 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Aviso: Provas Substitutivas Disponíveis</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Boleto disponível para pagamento</title>
+
   <style>
-    body,table,td,a{ -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; }
-    table,td{ mso-table-lspace:0pt; mso-table-rspace:0pt; }
-    img{ -ms-interpolation-mode:bicubic; border:0; height:auto; line-height:100%; display:block; }
-    table{ border-collapse:collapse !important; }
+    body,table,td,a{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}
+    table,td{mso-table-lspace:0pt;mso-table-rspace:0pt}
+    img{-ms-interpolation-mode:bicubic;border:0;height:auto;line-height:100%;outline:none;text-decoration:none}
+    table{border-collapse:collapse!important}
     body{
-      margin:0!important; padding:0!important; width:100%!important;
-      background-color:#f4f4f4; font-family:Montserrat, Arial, sans-serif; color:#383F36;
+      margin:0!important;
+      padding:0!important;
+      width:100%!important;
+      background-color:#f4f4f4;
+      font-family:Montserrat, Arial, sans-serif;
+      color:#383F36;
     }
-    .container{ max-width:600px; margin:0 auto; }
-    .card{ background:#ffffff; padding:22px; border-radius:8px; }
-    .title{ color:#5A6A2A; font-size:22px; margin:0 0 12px; }
-    .text{ font-size:15px; line-height:1.5; margin:0 0 14px; color:#383F36; }
-    .alert{ background:#FFF7E6; border-left:4px solid #C99714; padding:14px; border-radius:4px; color:#333333; margin-bottom:18px; }
-    .btn-whatsapp{ background-color:#25D366; color:#ffffff !important; text-decoration:none; padding:12px 20px; border-radius:6px; display:inline-block; font-weight:700; font-size:16px; }
-    .footer{ font-size:12px; color:#888888; text-align:center; padding:16px 0; }
+    .container{max-width:600px;margin:0 auto}
+    .card{background:#ffffff;padding:22px;border-radius:8px}
+    h1{color:#5A6A2A;font-size:22px;margin:0 0 12px}
+    p{font-size:15px;line-height:1.6;margin:0 0 14px}
+    .info-box{
+      background:#F9F9F9;
+      border-left:4px solid #5A6A2A;
+      padding:14px;
+      border-radius:4px;
+      margin-bottom:18px;
+    }
+    .btn{
+      background-color:#5A6A2A;
+      color:#ffffff !important;
+      text-decoration:none;
+      padding:14px 26px;
+      border-radius:6px;
+      display:inline-block;
+      font-weight:700;
+      font-size:16px;
+    }
+    .footer{
+      font-size:12px;
+      color:#888888;
+      text-align:center;
+      padding:18px;
+    }
     @media screen and (max-width:600px){
-      .container{ width:100% !important; padding:0 12px; }
-      .btn-whatsapp{ width:100% !important; display:block; text-align:center; }
+      .container{width:100%!important;padding:0 12px}
+      .btn{width:100%!important;text-align:center}
     }
   </style>
 </head>
-<body style="background-color:#f4f4f4; margin:0; padding:20px 0;">
-  <center>
+
+<body>
+  <center style="width:100%;background-color:#f4f4f4;padding:20px 0;">
     <div class="container">
-      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-        <!-- LOGO -->
+
+      <!-- LOGO -->
+      <table width="100%">
         <tr>
-          <td align="center" style="padding:20px 0;">
-            <img src="https://www.unicvpoloam.com.br/assets/NOVA%20LOGO%20UNICV%2012-04-CE110Jmi.png" width="180" alt="UniCV Polo Manaus Flores">
+          <td align="center" style="padding:20px 0;background:#ffffff;">
+            <img src="https://www.unicvpoloam.com.br/assets/NOVA%20LOGO%20UNICV%2012-04-CE110Jmi.png"
+                 width="180"
+                 alt="UniCV">
           </td>
         </tr>
+      </table>
 
-        <!-- CORPO -->
+      <!-- CONTEÚDO -->
+      <table width="100%">
         <tr>
-          <td>
-            <div class="card">
-              <h1 class="title">Provas Substitutivas disponíveis — faça a sua</h1>
+          <td class="card">
 
-              <p class="text"><strong>Olá, estudante!</strong></p>
+            <h1>Boleto disponível para pagamento</h1>
 
-              <p class="text">
-                As Provas Substitutivas já estão <strong>disponíveis</strong> para realização. Você pode fazer a sua prova entre
-                <strong>10/12/2025</strong> e <strong>16/12/2025 até às 23:00 (hora de Manaus)</strong>.
-              </p>
+            <p>
+              Olá, <strong>Jorlen de Vasconcelos Valente</strong>!
+            </p>
 
-              <div class="alert">
-                <strong style="display:block; color:#5A6A2A; margin-bottom:6px;">Importante</strong>
-                As provas aparecerão no Portal do Aluno, nas disciplinas em que você solicitou a substitutiva.  
-                Verifique seu portal e faça a prova dentro do prazo para não perder a oportunidade.
-              </div>
+            <p>
+              Identificamos que o boleto referente à sua mensalidade já está
+              <strong>disponível para pagamento</strong>. Confira os detalhes abaixo:
+            </p>
 
-              <p class="text">
-                Faça a prova o quanto antes — essa é a chance de recuperar a disciplina sem ter que cursá-la novamente.  
-                A Prova Substitutiva é uma oportunidade direta de aprovação: ao alcançar a nota mínima exigida (6 pontos), você mantém seu progresso no curso.
-              </p>
-
-            
-              <p class="text" style="margin-bottom:10px;">
-                Se tiver qualquer dúvida ou precisar solicitar suporte, fale conosco pelo WhatsApp do Polo.
-              </p>
-              <br>
-
-              <!-- BOTÃO WHATSAPP -->
-              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-bottom:12px;">
-                <tr>
-                  <td align="center">
-                    <!--[if mso]>
-                    <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml"
-                      href="https://wa.me/559220201260?text=Olá,%20tenho%20dúvida%20sobre%20a%20Prova%20Substitutiva"
-                      style="height:44px;v-text-anchor:middle;width:360px;" arcsize="8%"
-                      strokecolor="#25D366" fillcolor="#25D366">
-                      <w:anchorlock/>
-                      <center style="color:#ffffff;font-family:Arial,sans-serif;font-size:16px;font-weight:bold;">
-                        Falar com o Polo pelo WhatsApp
-                      </center>
-                    </v:roundrect>
-                    <![endif]-->
-                    <a class="btn-whatsapp"
-                       href="https://wa.me/559220201260?text=Olá,%20tenho%20dúvida%20sobre%20a%20Prova%20Substitutiva"
-                       target="_blank" rel="noopener noreferrer">
-                      Falar com o Polo pelo WhatsApp
-                    </a>
-                  </td>
-                </tr>
-              </table>
-              <br>
-
-              <p class="text" style="margin-top:6px;">
-                Estamos à disposição para ajudar — não perca essa oportunidade. Boa prova! 💚
-              </p>
-
-              <div style="margin-top:18px; border-top:1px solid #eee; padding-top:12px; font-size:14px; color:#5C635A;">
-                <strong style="color:#5A6A2A;">Polo UniCV – Manaus Flores</strong><br>
-                Telefone: <a href="tel:+559220201260" style="color:#5A6A2A; text-decoration:none;">(92) 2020-1260</a><br>
-                E-mail: <a href="mailto:polo.manaus.flores@unicv.edu.br" style="color:#5A6A2A; text-decoration:none;">polo.manaus.flores@unicv.edu.br</a>
-              </div>
-
-              <p style="margin:14px 0 0; font-size:12px; color:#888888;">
-                Este é um aviso automático do Polo. Caso já tenha realizado a prova, desconsidere esta mensagem.
-              </p>
+            <div class="info-box">
+              <p style="margin:0;"><strong>Aluno:</strong> Jorlen de Vasconcelos Valente</p>
+              <p style="margin:6px 0;"><strong>RA:</strong> 412601-2025</p>
+              <p style="margin:6px 0;"><strong>Mensalidade:</strong> 1/12</p>
+              <p style="margin:6px 0;"><strong>Vencimento:</strong> 23/01/2026</p>
+              <p style="margin:0;"><strong>Valor:</strong> R$ 155,93</p>
             </div>
+
+            <p>
+              Você pode acessar o <strong>Portal do Aluno</strong> para:
+            </p>
+
+            <ul style="font-size:15px;line-height:1.6;color:#383F36;margin:0 0 18px 18px;">
+              <li>Baixar o boleto;</li>
+              <li>Realizar o pagamento via <strong>PIX</strong>;</li>
+              <li>Efetuar o pagamento com <strong>cartão</strong>.</li>
+            </ul>
+
+            <!-- BOTÃO PORTAL -->
+            <table width="100%" style="margin:22px 0;">
+              <tr>
+                <td align="center">
+                  <a href="https://sistema.unicv.edu.br/aluno-v2/login"
+                     target="_blank"
+                     class="btn">
+                    👉 Acessar Portal do Aluno
+                  </a>
+                </td>
+              </tr>
+            </table>
+
+            <p>
+              Caso precise de qualquer apoio ou tenha dúvidas sobre o pagamento,
+              entre em contato conosco pelo WhatsApp do Polo.
+            </p>
+
+            <!-- CONTATO -->
+            <div style="border-top:1px solid #eee;padding-top:14px;font-size:14px;">
+              <strong style="color:#5A6A2A;">Polo UniCV – Manaus Flores</strong><br>
+              WhatsApp:
+              <a href="https://wa.me/559220201260"
+                 style="color:#5A6A2A;text-decoration:none;">
+                (92) 2020-1260
+              </a><br>
+              E-mail:
+              <a href="mailto:polo.manaus.flores@unicv.edu.br"
+                 style="color:#5A6A2A;text-decoration:none;">
+                polo.manaus.flores@unicv.edu.br
+              </a>
+            </div>
+
           </td>
         </tr>
 
         <!-- RODAPÉ -->
         <tr>
           <td class="footer">
-            UniCV © 2025 • Educação que transforma.
+            UniCV © 2026 • Educação que transforma.
           </td>
         </tr>
-
       </table>
+
     </div>
   </center>
 </body>
 </html>
+
