--- a/public/email.html
+++ b/public/email.html
@@ -21,6 +21,7 @@
     .container{max-width:600px;margin:0 auto}
     .card{background:#ffffff;padding:22px;border-radius:8px}
     h1{color:#5A6A2A;font-size:22px;margin:0 0 12px}
+    h2{color:#5A6A2A;font-size:18px;margin:22px 0 12px}
     p{font-size:15px;line-height:1.6;margin:0 0 14px}
     .info-box{
       background:#F9F9F9;
@@ -28,6 +29,11 @@
       padding:14px;
       border-radius:4px;
       margin-bottom:18px;
+    }
+    .steps{
+      margin:0 0 18px 18px;
+      font-size:15px;
+      line-height:1.6;
     }
     .btn{
       background-color:#5A6A2A;
@@ -75,31 +81,42 @@
             <h1>Boleto disponível para pagamento</h1>
 
             <p>
-              Olá, <strong>Jorlen de Vasconcelos Valente</strong>!
+              Olá, <strong>KARLA ADRIELE SOUSA CASTRO</strong>!
             </p>
 
             <p>
-              Identificamos que o boleto referente à sua mensalidade já está
-              <strong>disponível para pagamento</strong>. Confira os detalhes abaixo:
+              Informamos que o boleto referente à sua mensalidade já está
+              <strong>disponível para pagamento</strong>. Confira os dados abaixo:
             </p>
 
             <div class="info-box">
-              <p style="margin:0;"><strong>Aluno:</strong> Jorlen de Vasconcelos Valente</p>
-              <p style="margin:6px 0;"><strong>RA:</strong> 412601-2025</p>
-              <p style="margin:6px 0;"><strong>Mensalidade:</strong> 1/12</p>
-              <p style="margin:6px 0;"><strong>Vencimento:</strong> 23/01/2026</p>
-              <p style="margin:0;"><strong>Valor:</strong> R$ 155,93</p>
+              <p style="margin:0;"><strong>Aluna:</strong> KARLA ADRIELE SOUSA CASTRO</p>
+              <p style="margin:6px 0;"><strong>RA:</strong> 394313-2025</p>
+              <p style="margin:6px 0;"><strong>Mensalidade:</strong> 2/18</p>
+              <p style="margin:6px 0;"><strong>Vencimento:</strong> 26/01/2026</p>
+              <p style="margin:0;"><strong>Valor:</strong> R$ 131,99</p>
             </div>
 
             <p>
-              Você pode acessar o <strong>Portal do Aluno</strong> para:
+              O pagamento pode ser realizado diretamente pelo <strong>Portal do Aluno</strong>,
+              com as opções de <strong>boleto, PIX ou cartão</strong>.
             </p>
 
-            <ul style="font-size:15px;line-height:1.6;color:#383F36;margin:0 0 18px 18px;">
-              <li>Baixar o boleto;</li>
-              <li>Realizar o pagamento via <strong>PIX</strong>;</li>
-              <li>Efetuar o pagamento com <strong>cartão</strong>.</li>
-            </ul>
+            <h2>📌 Como acessar a área financeira</h2>
+
+            <ol class="steps">
+              <li>Acesse o <strong>Portal do Aluno</strong>;</li>
+              <li>No menu lateral esquerdo, clique em <strong>Financeiro</strong>;</li>
+              <li>Visualize seus boletos e escolha a forma de pagamento desejada.</li>
+            </ol>
+
+            <!-- IMAGEM EXPLICATIVA -->
+            <p style="margin-bottom:18px;">
+              <img src="https://raw.githubusercontent.com/SamDark0202/page-unicv-polo-manaus-flores/refs/heads/main/src/assets/imgfinanceiro.png"
+                   width="100%"
+                   style="border-radius:6px;"
+                   alt="Onde encontrar o menu Financeiro no Portal do Aluno">
+            </p>
 
             <!-- BOTÃO PORTAL -->
             <table width="100%" style="margin:22px 0;">
@@ -116,20 +133,18 @@
 
             <p>
               Caso precise de qualquer apoio ou tenha dúvidas sobre o pagamento,
-              entre em contato conosco pelo WhatsApp do Polo.
+              estamos à disposição para ajudar.
             </p>
 
             <!-- CONTATO -->
             <div style="border-top:1px solid #eee;padding-top:14px;font-size:14px;">
               <strong style="color:#5A6A2A;">Polo UniCV – Manaus Flores</strong><br>
               WhatsApp:
-              <a href="https://wa.me/559220201260"
-                 style="color:#5A6A2A;text-decoration:none;">
+              <a href="https://wa.me/559220201260" style="color:#5A6A2A;text-decoration:none;">
                 (92) 2020-1260
               </a><br>
               E-mail:
-              <a href="mailto:polo.manaus.flores@unicv.edu.br"
-                 style="color:#5A6A2A;text-decoration:none;">
+              <a href="mailto:polo.manaus.flores@unicv.edu.br" style="color:#5A6A2A;text-decoration:none;">
                 polo.manaus.flores@unicv.edu.br
               </a>
             </div>
@@ -149,4 +164,3 @@
   </center>
 </body>
 </html>
-
