--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta property="og:type" content="website" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4458597441594601"
      crossorigin="anonymous"></script>
-    <!-- Google Fonts -->
+    <!-- ✅ Google Fonts Otimizado -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Bebas+Neue:wght@400&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Meta Pixel Code -->
