Adição de termos e serviços

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <meta property="og:type" content="website" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4458597441594601"
      crossorigin="anonymous"></script>
+    <script async type="application/javascript"
+            src="https://news.google.com/swg/js/v1/swg-basic.js"></script>
+    <script>
+      (self.SWG_BASIC = self.SWG_BASIC || []).push(basicSubscriptions => {
+        basicSubscriptions.init({
+          type: "NewsArticle",
+          isPartOfType: ["Product"],
+          isPartOfProductId: "CAow4uWeDA:openaccess",
+          clientOptions: { theme: "light", lang: "pt-BR" }
+        });
+      });
+    </script>
     <!-- ✅ Google Fonts Otimizado -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
